# pyinstxtractor-ng

./: README.md  pyinstxtractor-ng.py  pyinstxtractor_ng.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: build.yaml  publish.yml
