[project]
name = "pyinstxtractor-ng"
version = "2026.04.07"
description = "PyInstaller Extractor Next Generation"
authors = [{ name = "extremecoders-re" }]
license = "GPL-3.0-only"
readme = "README.md"
packages = [{ include = "pyinstxtractor_ng.py" }]
dependencies = ["xdis==6.3.0", "pycryptodome==3.17"]
requires-python = ">=3.8"

[project.scripts]
pyinstxtractor-ng = 'pyinstxtractor_ng:main'

[tool.poetry.dependencies]
python = ">=3.8,<3.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
